--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -9,3 +9,7 @@ spring.jpa.properties.hibernate.dialect= org.hibernate.dialect.PostgreSQLDialect
 # Hibernate ddl auto (create, create-drop, validate, update)
 spring.jpa.hibernate.ddl-auto= update
 logging.level.org.hibernate.SQL=DEBUG
+logging.level.org.hibernate.type=trace
+
+spring.main.allow-circular-references=true
+
